i18n(es): Update invalid-rewrite404.mdx with caution note (#13308)
Co-authored-by: Sarah Rainsberger <5098874+sarah11918@users.noreply.github.com>
Co-authored-by: kevinzunigacuellar <46791833+kevinzunigacuellar@users.noreply.github.com>

--- a/src/content/docs/es/reference/errors/invalid-rewrite404.mdx
+++ b/src/content/docs/es/reference/errors/invalid-rewrite404.mdx
@@ -5,7 +5,9 @@ i18nReady: true
 githubURL: https://github.com/withastro/astro/blob/main/packages/astro/src/core/errors/errors-data.ts
 ---
 
-
+:::caution[Obsoleto]
+Este error proviene de una versión anterior de Astro y ya no se utiliza. Si no puedes actualizar tu proyecto a una versión más reciente, puedes consultar [Documentación antigua (sin mantenimiento)](/es/upgrade-astro/#documentación-antigua-sin-mantenimiento) para obtener ayuda.
+:::
 
 > **InvalidRewrite404**: Reescribir un 404 solo está permitido dentro de las páginas bajo demanda.
 
