i18n(es): update actions.mdx, add missing keys and review why-astro.mdx (#13284)
Co-authored-by: Sarah Rainsberger <5098874+sarah11918@users.noreply.github.com>
Co-authored-by: kevinzunigacuellar <46791833+kevinzunigacuellar@users.noreply.github.com>

--- a/src/content/docs/es/concepts/why-astro.mdx
+++ b/src/content/docs/es/concepts/why-astro.mdx
@@ -70,9 +70,9 @@ Un sitio web de Astro puede [cargar un 40% más rápido con un 90% menos de Java
 
 ### Fácil de usar
 
-**La meta de Astro es ser accessible a cada desarrollador web.** Astro fué diseñado para sentirse familiar y asequible independientemente el nivel de habilidad o experiencia pasada en el desarrollo web. 
+**La meta de Astro es ser accessible a cada desarrollador web.** Astro fue diseñado para sentirse familiar y asequible independientemente el nivel de habilidad o experiencia pasada en el desarrollo web. 
 
-El lenguaje de UI `.astro` es un superconjunto de HTML: ¡cualquier HTML válido es una sintaxis de plantilla válida en Astro! Entonces, si puedes escribir HTML, ¡puedes escribir componentes de Astro! Pero, además combina algunas de nuestra características favoritas tomadas de otros lenguajes de componentes, como expresiones JSX (React) y CSS con ámbito por defecto (Svelte y Vue). Esta cercanía a HTML también facilita el uso de mejoras progresivas y patrones comunes de accessibilidad sin un costo adicional.
+El lenguaje de UI `.astro` es un superconjunto de HTML: ¡cualquier HTML válido es una sintaxis de plantilla válida en Astro! Entonces, si puedes escribir HTML, ¡puedes escribir componentes de Astro! Pero, además combina algunas de nuestra características favoritas tomadas de otros lenguajes de componentes, como expresiones JSX (React) y CSS con ámbito por defecto (Svelte y Vue). Esta cercanía a HTML también facilita el uso de mejoras progresivas y patrones comunes de accesibilidad sin un costo adicional.
 
 Luego nos aseguramos de que también pudieras usar tus lenguajes de componentes de UI favoritos que ya conoces e incluso reutilizar componentes que ya puedas tener. React, Preact, Svelte, Vue, Solid y otros, incluidos los web components, son compatibles para la creación de componentes de UI en un proyecto de Astro.
 
@@ -86,6 +86,6 @@ Creemos firmemente que Astro es un proyecto exitoso si a las personas les encant
 
 Astro invierte en herramientas de desarrollo como una gran experiencia en el CLI desde el momento que abres la terminal, una extension oficial de VS Code para el resaltado de sintaxis, TypeScript y Intellisense, y una documentación mantenida activamente por cientos de contribuidores de la comunidad, disponible en 14 idiomas.
 
-Nuestra comunidad acogedora, respetuosa e inclusiva de Discord está lista para proporcionar soporte, motivacion y ánimo. Abre un hilo en `#support` para obtener ayuda con tu proyecto. Visita nuestro canal dedicado `#showcase` para compartir tus sitios de Astro, publicaciones de blog, videos e incluso trabajos en progreso para obtener comentarios seguros y críticas constructivas. Participa en eventos en vivo regulares como nuestra llamada comunitaria semanal "Talking and Doc'ing" y sesiones de API/bug.
+Nuestra comunidad acogedora, respetuosa e inclusiva de Discord está lista para proporcionar soporte, motivación y ánimo. Abre un hilo en `#support` para obtener ayuda con tu proyecto. Visita nuestro canal dedicado `#showcase` para compartir tus sitios de Astro, publicaciones de blog, videos e incluso trabajos en progreso para obtener comentarios seguros y críticas constructivas. Participa en eventos en vivo regulares como nuestra llamada comunitaria semanal "Talking and Doc'ing" y sesiones de API/bug.
 
 Como proyecto open-source, damos la bienvenida a contribuciones de todos los tipos y tamaños por parte de miembros de la comunidad de todos los niveles de experiencia. Estás invitado a unirte a las discusiones sobre la hoja de ruta para dar forma al futuro de Astro, y esperamos que contribuyas con correcciones y características al código base principal, compilador, docs, herramientas de lenguaje, sitios web y otros proyectos.
