--- a/src/content/i18n/es.yml
+++ b/src/content/i18n/es.yml
@@ -23,6 +23,9 @@ deploy.staticTag: Estático
 media.navTitle: Más guías de DAM
 # Vocabulario de guías de CMS
 cms.navTitle: Más guías de CMS
+cms.featuredSubheading: Socios de CMS destacados
+cms.allSubheading: Todas las guías de CMS
+
 # Vocabulario de guías de migración
 migration.navTitle: Más guías de migración
 # Vocabulario de <RecipeLinks>
