i18n(ja): add framework-components.mdx and update markdoc.mdx (#13197)

--- a/src/content/docs/ja/guides/integrations-guide/react.mdx
+++ b/src/content/docs/ja/guides/integrations-guide/react.mdx
@@ -282,6 +282,6 @@ export default defineConfig({
 
 [astro-integration]: /ja/guides/integrations-guide/
 
-[astro-ui-frameworks]: /ja/guides/framework-components/#using-framework-components
+[astro-ui-frameworks]: /ja/guides/framework-components/#フレームワークコンポーネントの使用
 
 [astro-actions]: /ja/guides/actions/
