--- a/src/content/docs/ja/tutorial/6-islands/1.mdx
+++ b/src/content/docs/ja/tutorial/6-islands/1.mdx
@@ -222,6 +222,6 @@ import SvelteCounter from '../components/SvelteCounter.svelte';
 
 - [Astroインテグレーションガイド](/ja/guides/integrations-guide/)
 
-- [AstroでUIフレームワークコンポーネントを使う](/ja/guides/framework-components/#using-framework-components)
+- [AstroでUIフレームワークコンポーネントを使う](/ja/guides/framework-components/#フレームワークコンポーネントの使用)
 
 - [Astro clientディレクティブのリファレンス](/ja/reference/directives-reference/#クライアントディレクティブ)
